--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Mohamad ali zadeh makoui's github page
+description: I'm Mohamad ali zadeh makoui and I'm intrested in HTML , CSS and Javascript.
